Minor fix for toolbar
*Causes horizontal scrolling in mobile

--- a/src/less/template-responsive.less
+++ b/src/less/template-responsive.less
@@ -139,6 +139,10 @@
 
 @media (max-width: 979px) {
 
+	.wrapper-toolbar {
+		overflow: hidden;
+	}
+
 	#featured #slider.jss-slider {
 
 		.jss-description {
